añadiendo primeros logos

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="screen"></div>
-    <div class="screen"></div>
+    <div class="screen">
+        <div id="logo">logo</div>
+    </div>
+    <div class="screen">
+        <div id="logo2">logo</div>
+    </div>
     <div class="screen"></div>
     <div class="screen"></div>
     <div class="screen"></div>
