cambiar div por section

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="screen">
+    <section class="screen">
+        <h1>Splash del juego</h1>
         <div id="logo">logo</div>
-    </div>
-    <div class="screen">
+    </section>
+    <section class="screen">
         <div id="logo2">logo</div>
-    </div>
-    <div class="screen"></div>
-    <div class="screen"></div>
-    <div class="screen"></div>
-    <div class="screen"></div>
+    </section>
+    <section class="screen"></section>
+    <section class="screen"></section>
+    <section class="screen"></section>
+    <section class="screen"></section>
 </body>
 </html>
