se añadieron textos y se mejoró el formato

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -11,12 +11,28 @@
         <h1>Splash del juego</h1>
         <div id="logo">logo</div>
     </section>
-    <section class="screen">
+    <br>
+
+    <section class="screen" id="home">
         <div id="logo2">logo</div>
+        <br>
+        <br>
+        <a href="#">Juego</a>
+        <br>
+        <br>
+        <a href="#">Configuración</a>
+        <br>
+        <br>
+        <a href="#">Créditos</a>
     </section>
+    <br>
+    
     <section class="screen"></section>
+    <br>
     <section class="screen"></section>
+    <br>
     <section class="screen"></section>
+    <br>
     <section class="screen"></section>
 </body>
 </html>
