Mejora de la posicion y formato de los botones

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -24,14 +24,16 @@
                 <button onclick="toCredits()">Créditos</button></div>
         </section>
         <section hidden class="screen" id="categories">
-            <div class="botones">
-                <button onclick="toHome()">Volver</button>
-            <br>
+            <div class="botones" id="categorias">
+             
             <button type="button">Categoria 1</button>
             <br>
             <button type="button">Categoria 2</button>
             <br>
             <button type="button">Categoria 3</button>
+            <br>
+            <button onclick="toHome()">Volver</button>
+            
             </div>
         </section>
         <section hidden class="screen" id="credits">
