Se creo una clase css botonrpta, ajuste de tamaño de botones

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -75,13 +75,13 @@
             <div id="QuizMusic"> <h1 >QuizMusic</h1> </div>
             <div id="logoCategorias"></div>
                 <div class="botones2"><br>
-                    <button>rpa #1</button>
+                    <button class="botonrpta">rpa #1</button>
                     <br>
-                    <button>rpa #2</button>
+                    <button class="botonrpta">rpa #2</button>
                     <br>
-                    <button>rpa #3</button>
+                    <button class="botonrpta">rpa #3</button>
                     <br>
-                    <button>rpa #4</button>
+                    <button class="botonrpta">rpa #4</button>
                     <br>
                     <button onclick="toHome()">Volver</button>
                 </div>
