Se agregó algoritmo para posicionar aleatoriamente las opciones de respuesta

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -75,13 +75,13 @@
             <div id="QuizMusic"> <h1 >QuizMusic</h1> </div>
             <div id="logoCategorias"></div>
                 <div class="botones2"><br>
-                    <button class="botonrpta">rpa #1</button>
+                    <button class="botonrpta" id="casilla1" onclick="respuestas()">rpa #1</button>
                     <br>
-                    <button class="botonrpta">rpa #2</button>
+                    <button class="botonrpta" id="casilla2" onclick="respuestas()">rpa #2</button>
                     <br>
-                    <button class="botonrpta">rpa #3</button>
+                    <button class="botonrpta" id="casilla3" onclick="respuestas()">rpa #3</button>
                     <br>
-                    <button class="botonrpta">rpa #4</button>
+                    <button class="botonrpta" id="casilla4" onclick="respuestas()">rpa #4</button>
                     <br>
                     <button onclick="toHome()">Volver</button>
                 </div>
