--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -12,7 +12,12 @@
     <!-- SPLASH (SECCION 1)-->
         <section class="screen" id="menu" id="seccion1">
            
-            <div id="logo" class="animated flipInX">logo</div>
+            <div class="animated zoomIn" id="logoPrincipal">
+                <img src="img/Logo y Splash/Asset 91.png" alt="logo">
+            </div>
+            <div class="animated flash" id="estrellas">
+                <img src="img/Logo y Splash/Asset 90.png" alt="stars">
+            </div>
             <br>
             <!-- 
                  <h1 class="animated flipInX">Splash del juego</h1>
@@ -22,13 +27,23 @@
         <!-- HOME (SECCIÓN 2)-->
         </section>
         <section hidden class="screen" id="home">
-            <div id="QuizMusic"> <h1 >QuizMusic</h1> </div>
-            <div id="logo2">logo</div>
+
+            <div id="logoEstrella" class="animated tada">
+                <img  src="img/Logo y Splash/Asset 89.png" alt="Stars">
+            </div>
+            <!-- id= "logo2" -->
+            <div id="logoPrincipal">
+                <img src="img/Logo y Splash/Asset 91.png" alt="logo">
+            </div>
+            <div id="estrellas">
+                <img src="img/Logo y Splash/Asset 90.png" alt="stars">
+            </div>
             <div class="botones" id="PrimerosBotones"><button onclick="toCategories()">Juego</button>
                 <br>
-                <button onclick="toConf()">Configuración</button>
+                <button onclick="toConf()">Instruccion</button>
                 <br>
-                <button onclick="toCredits()">Créditos</button></div>
+                <button onclick="toCredits()">Créditos</button>
+            </div>
         </section>
 
         <!--CATEGORIAS (SECCION 2)-->
