--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Stars </title>
+        <title>QuizMusic</title>
         <link rel="stylesheet" href="css/animated.css">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/main.css">
