Se agregó sección de instrucciones

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -53,7 +53,7 @@
             <!--Boton jugar-->
            <div id="primerosBotones">
                 <div >
-                    <img class="botonImagen" id="botonInstrucciones" onclick="toConf()" src="img/Botones y Fondos/Asset 73.png" alt="Juego">
+                    <img class="botonImagen" id="botonInstrucciones" onclick="toInstructions()" src="img/Botones y Fondos/Asset 73.png" alt="Juego">
 
                 </div>
                 <div >
@@ -97,13 +97,22 @@
                 <br>
                 <button onclick="toHome()">Volver</button>
             </section>
-        <!-- CONFIGURACIÓN SECCIÓN (4)-->
+        <!-- INSTRUCCIONES SECCIÓN (4)-->
         <section hidden class="screen" id="conf">
-            <h1>Configuración</h1>
-            <br>
-            <div class="botones"><button onclick="toHome()">Volver</button></div>
-            
+            <div>
+                <img class="botonImagen" id="botonHome" onclick="toHome()" src="img/Botones y Fondos/Asset 76.png" alt="Home">
+            </div>
+            <div>
+                <img id="interfaz" src="img/Interfaces y barritas/Asset 123.png" alt="Interfaz1">
+            </div>
+            <div>
+                <img class="botonImagen" id="botonSig" onclick="toSigIns()" src="img/Botones y Fondos/Asset 79.png" alt="Siguiente">
+            </div>
+            <div>
+                <img id="barrita" src="img/Interfaces y barritas/Asset 129.png" alt="Barra">
+            </div>
         </section>
+
         <!-- i dont know-->
         <section hidden class="screen" id="dontknow"></section>
 
