Optimizando funciones... se cambiaron clases de secciones

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- BODY-->
     <!-- SPLASH (SECCION 1)-->
-    <section class="screen fondoUno" id="menu" id="seccion1">
+    <section class="fondoUno" id="menu" id="seccion1">
 
         <div class="animated zoomIn" id="logoPrincipal">
             <img src="img/Logo y Splash/Asset 91.png" alt="logo">
@@ -29,7 +29,7 @@
 
         <!-- HOME (SECCIÓN 2)-->
     </section>
-    <section hidden class="screen fondoUno" id="home">
+    <section class="fondoUno oculto" id="home">
 
         <!-- fondo
             <div>
@@ -74,8 +74,8 @@
 
     </section>
 
-    <!--                                    CATEGORIAS (SECCION 2)-->
-    <section hidden class="screen" id="categories">
+    <!--                                    CATEGORIAS (SECCION 3)-->
+    <section class="oculto" id="categories">
         <!-- fondo-->
         <div>
             <img id="fondoAzulCat" src="img/creditos/Asset 121.png" alt="Fondo azul">
@@ -109,8 +109,8 @@
         </div>
     </section>
 
-    <!--                                    CRÉDITOS SECCIÓN (3)-->
-    <section hidden class="screen" id="credits">
+    <!--                                    CRÉDITOS SECCIÓN (4)-->
+    <section class="oculto" id="credits">
 
         <div>
             <img id="fondoCreditos" src="img/creditos/Asset 120.png" alt="fondo azul">
@@ -128,8 +128,8 @@
 
 
     </section>
-    <!--                                    INSTRUCCIONES SECCIÓN (4)-->
-    <section hidden class="screen" id="conf">
+    <!--                                    INSTRUCCIONES SECCIÓN (5)-->
+    <section class="oculto" id="conf">
         <div>
             <img class="botonImagen" id="botonHome" onclick="toHome()" src="img/Botones y Fondos/Asset 76.png"
                 alt="Home">
@@ -147,11 +147,11 @@
     </section>
 
     <!-- i dont know-->
-    <section hidden class="screen" id="dontknow"></section>
+    <section class="oculto" id="dontknow"></section>
 
 
-    <!--                                    SECCIÓN JUEGO                                     -->
-    <section hidden class="screen" id="juego">
+    <!--                                    SECCIÓN JUEGO      SECCION 6                               -->
+    <section class="oculto" id="juego">
         <div id="QuizMusic">
             <h1>QuizMusic</h1>
         </div>
