Funcionan preguntas, respuestas, estrellas y aleatoriedad

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- BODY-->
     <!-- SPLASH (SECCION 1)-->
-    <section class="fondoUno" id="menu" id="seccion1">
+    <section class="screen fondoUno" id="menu" id="seccion1">
 
         <div class="animated zoomIn" id="logoPrincipal">
             <img src="img/Logo y Splash/Asset 91.png" alt="logo">
@@ -29,7 +29,7 @@
 
         <!-- HOME (SECCIÓN 2)-->
     </section>
-    <section class="fondoUno oculto" id="home">
+    <section hidden class="screen fondoUno" id="home">
 
         <!-- fondo
             <div>
@@ -56,17 +56,17 @@
         <!--Boton jugar-->
         <div id="primerosBotones">
             <div>
-                <img class="botonImagen" id="botonInstrucciones" onclick="toInstructions()"
+                <img class="botonImagen" id="botonInstrucciones" onclick="toSection('instruct')"
                     src="img/Botones y Fondos/Asset 73.png" alt="Juego">
 
             </div>
             <div>
-                <img class="botonImagen" id="botonCreditos" onclick="toCredits()"
+                <img class="botonImagen" id="botonCreditos" onclick="toSection('credits')"
                     src="img/Botones y Fondos/Asset 74.png" alt="Juego">
 
             </div>
             <div>
-                <img class="botonImagen" id="botonJugar" onclick="toCategories()"
+                <img class="botonImagen" id="botonJugar" onclick="toSection('categories')"
                     src="img/Botones y Fondos/Asset 75.png" alt="Juego">
             </div>
         </div>
@@ -74,8 +74,8 @@
 
     </section>
 
-    <!--                                    CATEGORIAS (SECCION 3)-->
-    <section class="oculto" id="categories">
+    <!--                                    CATEGORIAS (SECCION 2)-->
+    <section hidden class="screen" id="categories">
         <!-- fondo-->
         <div>
             <img id="fondoAzulCat" src="img/creditos/Asset 121.png" alt="Fondo azul">
@@ -83,7 +83,7 @@
 
         <!-- to home-->
         <div>
-            <img class="botonImagen" id="botonHome" onclick="toHome()" src="img/Botones y Fondos/Asset 76.png"
+            <img class="botonImagen" id="botonHome" onclick="toSection('home')" src="img/Botones y Fondos/Asset 76.png"
                 alt="Home">
         </div>
         <!-- categories-->
@@ -109,14 +109,14 @@
         </div>
     </section>
 
-    <!--                                    CRÉDITOS SECCIÓN (4)-->
-    <section class="oculto" id="credits">
+    <!--                                    CRÉDITOS SECCIÓN (3)-->
+    <section hidden class="screen" id="credits">
 
         <div>
             <img id="fondoCreditos" src="img/creditos/Asset 120.png" alt="fondo azul">
         </div>
         <div>
-            <img class="botonImagen" id="botonHome" onclick="toHome()" src="img/Botones y Fondos/Asset 76.png"
+            <img class="botonImagen" id="botonHome" onclick="toSection('home')" src="img/Botones y Fondos/Asset 76.png"
                 alt="Home">
         </div>
         <div id="equipo">
@@ -128,12 +128,10 @@
 
 
     </section>
-    <!--                                    INSTRUCCIONES SECCIÓN (5)-->
-    <section class="oculto" id="conf">
-        <div>
-            <img class="botonImagen" id="botonHome" onclick="toHome()" src="img/Botones y Fondos/Asset 76.png"
+    <!--                                    INSTRUCCIONES SECCIÓN (4)-->
+    <section hidden class="screen" id="instruct">
+        <img class="botonImagen" id="botonHome" onclick="toSection('home')" src="img/Botones y Fondos/Asset 76.png"
                 alt="Home">
-        </div>
         <div>
             <img id="interfaz" src="img/Interfaces y barritas/Asset 123.png" alt="Interfaz1">
         </div>
@@ -146,28 +144,31 @@
         </div>
     </section>
 
-    <!-- i dont know-->
-    <section class="oculto" id="dontknow"></section>
-
-
-    <!--                                    SECCIÓN JUEGO      SECCION 6                               -->
-    <section class="oculto" id="juego">
-        <div id="QuizMusic">
-            <h1>QuizMusic</h1>
+    <!--                                    SECCIÓN JUEGO                                     -->
+    <section hidden class="screen" id="juego">
+        <div>
+            <img id="bar" src="img/Interfaces y barritas/Asset 129.png" alt="Barra">
+        </div>
+        <div class="overhead">
+            <img id="lastChance" class="stars" src="img/Estrellas/Asset 108.png">
+            <img id="secondChance" class="stars" src="img/Estrellas/Asset 108.png">
+            <img id="thirdChance" class="stars" src="img/Estrellas/Asset 108.png">
+            <img class="botonImagen" id ="next2Stars" onclick="toSection('categories')" src="img/Botones y Fondos/Asset 76.png"
+                alt="Home">
         </div>
         <div id="logoCategorias"></div>
-        <div class="botones2"><br>
-            <button class="botonrpta" id="casilla1" onclick="respuestas()"></button>
-            <br>
-            <button class="botonrpta" id="casilla2" onclick="respuestas()"></button>
-            <br>
-            <button class="botonrpta" id="casilla3" onclick="respuestas()"></button>
-            <br>
-            <button class="botonrpta" id="casilla4" onclick="respuestas()"></button>
-            <br>
-            <button onclick="toHome()">Volver</button>
-        </div>
-
+            <div class="botones2"><br>
+                <button class="botonrpta" id="casilla1" onclick="verify('casilla1')"></button>
+                <br>
+                <button class="botonrpta" id="casilla2" onclick="verify('casilla2')"></button>
+                <br>
+                <button class="botonrpta" id="casilla3" onclick="verify('casilla3')"></button>
+                <br>
+                <button class="botonrpta" id="casilla4" onclick="verify('casilla4')"></button>
+                <br>
+                <img id="timer" src="img/Temporizador/Asset 113.png"
+                    alt="Home">
+            </div>
         </div>
     </section>
 
