Se agregaron colores de buena y mala respuesta, corrección de imágenes y temporizador

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -150,7 +150,7 @@
             <img id="lastChance" class="stars" src="img/Estrellas/Asset 108.png">
             <img id="secondChance" class="stars" src="img/Estrellas/Asset 108.png">
             <img id="thirdChance" class="stars" src="img/Estrellas/Asset 108.png">
-            <img class="botonImagen" id ="next2Stars" onclick="toSection('categories')" src="img/Botones y Fondos/Asset 76.png"
+            <img class="botonImagen" id ="next2Stars" onclick="returnConfirm()" src="img/Botones y Fondos/Asset 76.png"
                 alt="Home">
         </div>
         <img id="logoCategorias"></img>
@@ -168,9 +168,7 @@
                     alt="Home" style>
                     <div id="timerNumb">10</div>
                 </div>
-                
             </div>
-        </div>
     </section>
 
     <script src="js/main.js"></script>
