se agregaron imagenes, se mejoro el codigo, se mejoro puntaje. 12-03-2020 6:43pm

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -89,23 +89,17 @@
         <!-- categories-->
         <div>
             <img class="botonCategorias" id="reg" onclick="toGame(0)" src="img/Botones y Fondos/Asset 80.png" alt="Reg">
-
-
-
-            <img class="botonCategorias" id="punk" onclick="toGame(1)" src="img/Botones y Fondos/Asset 83.png"
-                alt="Punk">
-
-
-
-            <img class="botonCategorias" id="rock" onclick="toGame(2)" src="img/Botones y Fondos/Asset 81.png"
-                alt="Rock">
-
-
-
+            <div class="scores" id="score0">0</div>
+            <img class="botonCategorias" id="punk" onclick="toGame(1)" src="img/Botones y Fondos/Asset 83.png"alt="Punk">
+            <div class="scores" id="score1">0</div>
+            <img class="botonCategorias" id="rock" onclick="toGame(2)" src="img/Botones y Fondos/Asset 81.png"alt="Rock">
+            <div class="scores" id="score2">0</div>
             <img class="botonCategorias" id="pop" onclick="toGame(3)" src="img/Botones y Fondos/Asset 82.png" alt="Pop">
+            <div class="scores" id="score3">0</div>
         </div>
-        <div>
+        <div id="totalScoreStar">
             <img id="estrellaPuntajeTotal" src="img/Estrellas/Asset 108.png" alt="PuntajeTotal">
+            <div id="totalScore">0</div>
         </div>
     </section>
 
