Se reemplazaron elementos de opcion multiple por imagenes

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -147,15 +147,29 @@
             <img class="botonImagen" id ="next2Stars" onclick="returnConfirm()" src="img/Botones y Fondos/Asset 76.png"
                 alt="Home">
         </div>
-        <img id="logoCategorias"></img>
+        
+        <img class="animated tada" id="logoCategorias"></img>
             <div class="botones2"><br>
-                <button class="botonrpta" id="casilla1" onclick="verify('casilla1')"></button>
+                
+                <div class="contenedor">
+                    <img src="img/Botones y Fondos/Asset 84.png" />
+                    <div class="centrado botonrpta" id="casilla1" onclick="verify('casilla1')"></div>
+                  </div>
                 <br>
-                <button class="botonrpta" id="casilla2" onclick="verify('casilla2')"></button>
+                <div class="contenedor">
+                    <img src="img/Botones y Fondos/Asset 84.png" />
+                    <div class="centrado botonrpta" id="casilla2" onclick="verify('casilla2')"></div>
+                  </div>
                 <br>
-                <button class="botonrpta" id="casilla3" onclick="verify('casilla3')"></button>
+                <div class="contenedor">
+                    <img src="img/Botones y Fondos/Asset 84.png" />
+                    <div class="centrado botonrpta" id="casilla3" onclick="verify('casilla3')"></div>
+                  </div>
                 <br>
-                <button class="botonrpta" id="casilla4" onclick="verify('casilla4')"></button>
+                <div class="contenedor">
+                    <img src="img/Botones y Fondos/Asset 84.png" />
+                    <div class="centrado botonrpta" id="casilla4" onclick="verify('casilla4')"></div>
+                  </div>
                 <br>
                 <div class="container">
                   <img id="timer" src="img/Temporizador/Asset 113.png"
