Minimo producto viable

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -188,5 +188,13 @@
             </div>
     </section>
 
+    <section id="alert" class="oculto">
+        <div id="backgrnd">
+            <span id="pregunta_salir">¿Realmente quieres salir?</span>
+            <button id="aceptar" class="boton" onclick="regresar()">Aceptar</button>
+            <button id="cancelar" class="boton" onclick="cancelar()">Cancelar</button>
+        </div>
+    </section>
+
     <script src="js/main.js"></script>
 </body>
