Se corrigieron algunas cosas de las Instrucciones

--- a/QuizMusic/index.html
+++ b/QuizMusic/index.html
@@ -136,8 +136,9 @@
     </section>
     <!--                                    INSTRUCCIONES SECCIÓN (4)-->
     <section hidden class="screen" id="instruct">
-        <img class="botonImagen" id="botonHome" onclick="toSection('home')" src="img/Botones y Fondos/Asset 76.png"
+        <img class="botonImagen" id="botonHomeIns" onclick="toSection('home')" src="img/Botones y Fondos/Asset 76.png"
                 alt="Home">
+        <img id="barIns" src="img/Interfaces y barritas/Asset 129.png" alt="">
         <div>
             <img id="interfaz" src="img/Interfaces y barritas/Asset 123.png" alt="Interfaz1">
         </div>
